fix: overflow in streetmodecontainer

--- a/app/component/streetmodeselector.scss
+++ b/app/component/streetmodeselector.scss
@@ -19,7 +19,7 @@
 
 .mobile {
   .street-mode-selector-container {
-    overflow: auto;
+    overflow-x: auto;
     padding-left: 1.2em;
   }
 }
